move extensions to vars and readme